RL: added baseline

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -2026,30 +2026,6 @@
     "\n",
     "### Average Reward Formulation in Policy Gradient Methods\n",
     "\n",
-    "### Policy Gradient Theorem\n",
-    "REINFORCE algorithm is a sample based implementation of the the general objective\n",
-    "\n",
-    "Objective function as to maximize the integral of state value over all state values. The gradient of this expectation is hard to compute as we do not have the true distribution over the state and we do not have the state value. \n",
-    "\n",
-    "REINFORCE estiamte the gradient of the objective by using samples of trajectory and its actual return\n",
-    "Comparison of the two formula\n",
-    "with large number of samples, the estimated gradient converges to the true gradient.\n",
-    "\n",
-    "However, we can generalize the gradient objective into computable format\n",
-    "Formula of the gradient objective\n",
-    "expand v(s) using q(s, a)\n",
-    "expand the gradient of v(s) using chain rule\n",
-    "one of the gradient with respect to the policy is easy to compute because we can do it using backpropogation\n",
-    "for the other term, expand gradient of q(s, a) using the bellman equation and simplify\n",
-    "\n",
-    "define the marginal distribution and give the final expression\n",
-    "\n",
-    "give the expression in the trajectory as t -> inf\n",
-    "\n",
-    "use log derivative trick to simply the expression and write the gradient objective in the expectation form.\n",
-    "\n",
-    "Final policy gradient theorm and expression\n",
-    "\n",
     "\n",
     "## The Policy Gradient Theorem\n",
     "The REINFORCE algorithm is effectively a **sample-based implementation** of the theoretical Policy Gradient goal. The general objective in RL is to maximize the expected value of states under the policy's state distribution:\n",
@@ -2062,7 +2038,7 @@
     "1.  **Unknown State Distribution $p(s)$:** We do not know the true distribution of states reachable by the policy, nor how that distribution shifts ($\\nabla_\\theta p(s)$) when the policy changes.\n",
     "2.  **Unknown Value Function $v_{\\pi_\\theta}(s)$:** We do not have the true value function; we only have samples of returns.\n",
     "\n",
-    "REINFORCE bypasses these intractable integrals by using **Monte Carlo sampling**. It estimates the gradient using the **actual return** $G_t$ of a sampled trajectory as an unbiased estimator of $Q(s, a)$.\n",
+    "REINFORCE bypasses these intractable integrals by using **Monte Carlo sampling**. It estimates the gradient using the **actual return** $G_t$ of a sampled trajectory as an unbiased estimator of the state value and the average over $N$ trajectories as the estimation for the state distribution.\n",
     "\n",
     "$$\n",
     "\\nabla_\\theta J(\\theta) \\approx \\frac{1}{N} \\sum_{i=1}^N \\sum_{t=0}^{T} \\nabla_\\theta \\log \\pi(a_t|s_t) G_t\n",
@@ -2135,7 +2111,7 @@
     "\\nabla_\\theta J(\\theta) = \\int_{x} \\phi(x) \\underbrace{\\left( \\int_{s_0} p(s_0) \\sum_{k=0}^{\\infty} \\gamma^k P(s_0 \\to x, k, \\pi) \\, ds_0 \\right)}_{\\text{Total Discounted Visitation Density}} \\, dx\n",
     "$$\n",
     "\n",
-    "The term in the brackets represents the total discounted probability of visiting state $x$ (sometimes denoted $d^\\pi(s)$). We define the **normalized discounted state distribution** $p(s)$ as:\n",
+    "The term in the brackets represents the total discounted probability of visiting state $x$ (sometimes denoted $d^\\pi(s)$). We define the **normalized discounted state distribution** $p(s)$, which represents the overall probablity of being in a **single** state under policy $\\pi$. This term depends on both the policy and the environment dynamics.\n",
     "\n",
     "$$\n",
     "p(s) = \\frac{1}{1-\\gamma} \\int_{s_0} p(s_0) \\sum_{k=0}^{\\infty} \\gamma^k P(s_0 \\to s, k, \\pi) ds_0\n",
@@ -2163,13 +2139,131 @@
     "Written compactly as an expectation:\n",
     "\n",
     "$$\n",
-    "\\nabla_\\theta J(\\theta) = \\mathbb{E}_{s \\sim p, a \\sim \\pi} \\left[ q^{\\pi_\\theta}(s, a) \\nabla_\\theta \\ln \\pi_\\theta(a|s) \\right]\n",
+    "\\nabla_\\theta J(\\theta) = \\mathbb{E}_{s \\sim p, a \\sim \\pi} \\left[ q_{\\pi_\\theta}(s, a) \\nabla_\\theta \\ln \\pi_\\theta(a|s) \\right]\n",
     "$$\n",
     "\n",
     "**Significance:**\n",
     "This theorem proves that we can compute the gradient of the performance $J(\\theta)$ **without** differentiating the state distribution or the environment dynamics. We only need:\n",
     "1.  **$\\nabla \\ln \\pi$:** The gradient of the policy itself (computed via backpropagation).\n",
-    "2.  **$q(s,a)$:** The estimated return (obtained via interaction/sampling from the environment)."
+    "2.  **$q(s,a)$:** The estimated return (obtained via interaction/sampling from the environment).\n",
+    "\n",
+    "This provide us to a way to train the policy network.\n",
+    "\n",
+    "## Implementation of Policy Gradient Methods\n",
+    "There are three primary families of policy pradient implementations, categorized by how they estimate the return and stabilize the gradient:\n",
+    "1.  **Vanilla Version (REINFORCE)**\n",
+    "2.  **Baseline Version (Advantage)**\n",
+    "3.  **Trust Region Methods** (e.g., TRPO, PPO, etc)\n",
+    "\n",
+    "### 1. Vanilla Version (REINFORCE)\n",
+    "The Vanilla Policy Gradient algorithm (the REINFORCE algorithm), relies on **Monte Carlo sampling**. It uses the actual observed return $G_t$ from a complete trajectory as the unbiased estimator for the action-value $q(s_t, a_t)$.\n",
+    "\n",
+    "#### Update Formula\n",
+    "For a trajectory $\\tau$ consisting of steps $t=0 \\dots T$, the parameters $\\theta$ are updated via gradient ascent:\n",
+    "\n",
+    "$$\\theta \\leftarrow \\theta + \\alpha \\sum_{t=0}^{T-1} \\nabla_\\theta \\log \\pi_\\theta(a_t|s_t) G_t\n",
+    "$$\n",
+    "\n",
+    "Where $G_t = \\sum_{k=t}^{T} \\gamma^{k-t} r_k$ is the discounted return from time $t$.\n",
+    "\n",
+    "While $G_t$ is an unbiased estimator of $q(s, a)$, this method suffers from severe **High Variance**.\n",
+    "* **Magnitude Sensitivity:** The gradient update scales linearly with the magnitude of the rewards. If rewards are large (e.g., +1000 vs +1010), the gradient updates will be massive, leading to unstable training.\n",
+    "* **All-Positive Rewards:** If all rewards are positive, the gradient tries to push the probabilities of *all* sampled actions up. The optimal action is only found because it is pushed up *slightly more* than the others. This \"tug-of-war\" slows down convergence significantly.\n",
+    "Ideally, we want the target value to be centered around 0. This ensures that bad actions produce negative gradients (decreasing probability) and good actions produce positive gradients (increasing probability).\n",
+    "\n",
+    "### 2. Baseline Version (Advantage)\n",
+    "To address the variance and magnitude issues, we introduce a **Baseline** $b(s)$. The goal is to center the return estimator by subtracting a value that depends on the state but **not** on the action in order to \"access\" the quality of the action. \n",
+    "\n",
+    "$$q'(s, a) = q(s, a) - b(s)$$\n",
+    "\n",
+    "Ideally, we want to give **better-than-average** actions a positive score and **worse-than-average** actions a negative score. Crucially, even if an action yields a positive absolute reward (e.g., +10), if it performs worse than other possible actions (e.g., average is +50), the baseline ensures it receives a negative advantage score, discouraging the agent from taking it.\n",
+    "\n",
+    "We can prove that subtracting a baseline $b(s)$ does not alter the true gradient of the objective. Starting with the expected gradient form where we introduce the baseline:\n",
+    "$$\n",
+    "\\nabla J(\\theta) = \\mathbb{E}_{s \\sim \\pi} \\left[ \\int_{a} \\nabla_\\theta \\pi_\\theta(a|s) (q_\\pi(s, a) - b(s)) \\right]\n",
+    "$$\n",
+    "\n",
+    "We expand the term using the distributive property:\n",
+    "$$\n",
+    "\\nabla J(\\theta) = \\underbrace{\\mathbb{E} \\left[ \\int_{a} \\nabla_\\theta \\pi_\\theta(a|s) q_\\pi(s, a) \\right]}_{\\text{Original Policy Gradient}} - \\underbrace{\\mathbb{E} \\left[ \\int_{a} \\nabla_\\theta \\pi_\\theta(a|s) b(s) \\right]}_{\\text{Baseline Term}}\n",
+    "$$\n",
+    "\n",
+    "Let's analyze the **Baseline Term**. Since $b(s)$ is constant with respect to the integral over actions $a$, we can move it outside the summation:\n",
+    "$$\n",
+    "\\text{Baseline Term} = \\mathbb{E}_{s} \\left[ b(s) \\int_{a} \\nabla_\\theta \\pi_\\theta(a|s) \\right]\n",
+    "$$\n",
+    "\n",
+    "Using the linearity of the derivative (since the integral is with respect to $a$ and the gradient is with respect to $\\theta$), $\\int \\nabla = \\nabla \\int$:\n",
+    "$$\n",
+    "\\int_{a} \\nabla_\\theta \\pi_\\theta(a|s) = \\nabla_\\theta \\left( \\int_{a} \\pi_\\theta(a|s) \\right)\n",
+    "$$\n",
+    "\n",
+    "Since probabilities distribution must integrate to 1 ($\\int \\pi = 1$), and the gradient of a constant is 0:\n",
+    "$$\n",
+    "\\nabla_\\theta (1) = 0\n",
+    "$$\n",
+    "\n",
+    "The baseline term vanishes. Therefore, we can subtract any function $b(s)$ (as long as it does not depend on $a$) without introducing bias to the gradient estimation, where\n",
+    "\n",
+    "$$\\nabla J(\\theta) = \\mathbb{E}_{s \\sim \\pi} \\left[ \\int_{a} \\nabla_\\theta \\pi_\\theta(a|s) (q_\\pi(s, a) - b(s)) \\right] =  \\mathbb{E}_{s \\sim \\pi} \\left[ \\int_{a} \\nabla_\\theta \\pi_\\theta(a|s) q_\\pi(s, a)\\right] = \\mathbb{E}_{s \\sim p, a \\sim \\pi} \\left[ q_{\\pi_\\theta}(s, a) \\nabla_\\theta \\ln \\pi_\\theta(a|s) \\right]$$\n",
+    "\n",
+    "#### The Advantage Function\n",
+    "We select the baseline to be the **value function** of the state, $b(s) = v_\\pi(s)$. This transforms our estimator into the **advantage function**:\n",
+    "\n",
+    "$$\n",
+    "A_\\pi(s, a) = q_\\pi(s, a) - v_\\pi(s)\n",
+    "$$\n",
+    "\n",
+    "* **Interpretation:** The Advantage assesses how much better (or worse) the chosen action is compared to the **average** performance in that state, which is represented by $v_\\pi(s)$.\n",
+    "* **Centering:** If an action is average, $A \\approx 0$. If it is effectively good, $A > 0$. If poor, $A < 0$. This stabilizes the gradient magnitude.\n",
+    "\n",
+    "#### Computing $v(s)$\n",
+    "In practice, we do not know the true $v_\\pi(s)$. We approximate it using **Function Approximation** with a seperate neural network:\n",
+    "1.  Initialize a separate neural network (Value Network) $v_\\phi(s)$ with parameters $\\phi$.\n",
+    "2.  Train this network using Mean Squared Error (MSE) regression against the actual observed returns $G_t$:\n",
+    "    $$L(\\phi) = \\frac{1}{N} \\sum (G_t - v_\\phi(s_t))^2$$\n",
+    "\n",
+    "#### Final Update Formula\n",
+    "The Policy Gradient update using the Advantage estimate (where $G_t$ estimates $q$ and $v_\\phi$ estimates baseline), which provides a more stable, low variance training.\n",
+    "\n",
+    "$$\n",
+    "\\theta \\leftarrow \\theta + \\alpha \\sum_{t=0}^{T} \\nabla_\\theta \\ln \\pi_\\theta(a_t|s_t) \\underbrace{(G_t - v_\\phi(s_t))}_{\\text{Advantage Estimate } \\hat{A}_t}\n",
+    "$$\n",
+    "\n",
+    "### Baseline Algorithm (Monte Carlo Policy Gradient)\n",
+    "1. Given:\n",
+    "   - Learning rates $\\alpha \\in (0, 1]$ (for Policy) and $\\beta \\in (0, 1]$ (for Value)\n",
+    "   - Discount factor $\\gamma \\in [0, 1]$\n",
+    "   - A parameterized differentiable **Policy function** $\\pi(a|s; \\theta)$ (Policy Network)\n",
+    "   - A parameterized differentiable **State-Value function** $\\hat{v}(s; w)$ (Value Network)\n",
+    "\n",
+    "2. Initialize:\n",
+    "   - Policy weights $\\theta$ and Value weights $w$ arbitrarily.\n",
+    "\n",
+    "3. Repeat (for each episode):\n",
+    "   - **Generate Episode:**\n",
+    "     - Initialize $S_0$.\n",
+    "     - Generate a full trajectory $\\tau = S_0, A_0, R_1, S_1, A_1, R_2, \\dots, S_{T-1}, A_{T-1}, R_T$ by following policy $\\pi(\\cdot|\\cdot; \\theta)$ until a terminal state $S_T$ is reached.\n",
+    "\n",
+    "   - **For each timestep $t = 0, 1, \\dots, T-1$:**\n",
+    "     - Calculate the return $G_t$ (cumulative discounted reward from step $t$ onwards):\n",
+    "       $$G_t = \\sum_{k=t+1}^{T} \\gamma^{k-t-1} R_k$$\n",
+    "\n",
+    "     - Calculate the **Advantage / Prediction Error** $\\delta_t$ (the difference between actual return and the baseline prediction):\n",
+    "       $$\\delta_t = G_t - \\hat{v}(S_t; w)$$\n",
+    "\n",
+    "     - **Value Network Update Step:**\n",
+    "       - Update weights $w$ to minimize the Mean Squared Error between prediction $\\hat{v}(S_t)$ and target $G_t$ (Stochastic Gradient Descent):\n",
+    "         $$w \\leftarrow w + \\beta \\delta_t \\nabla_w \\hat{v}(S_t; w)$$\n",
+    "\n",
+    "     - **Policy Update Step:**\n",
+    "       - Update weights $\\theta$ using the Advantage $\\delta_t$ to scale the gradient (Stochastic Gradient Ascent):\n",
+    "         $$\\theta \\leftarrow \\theta + \\alpha \\delta_t \\nabla_\\theta \\log \\pi(A_t|S_t; \\theta)$$\n",
+    "\n",
+    "4. Repeat until convergence:\n",
+    "   - Continue running episodes until policy stabilizes or average return is maximized.\n",
+    "\n",
+    "> Note: This results in moving target, but the error is managable because the value network is always trained on unbiased estimation (observed return) unlike DQN, which is trained based on its own value estimates. Therefore, the training of the policy net will eventually converge as the value network gives more accurate prediction over time."
    ]
   },
   {
