--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -2176,7 +2176,7 @@
     "\n",
     "$$q'(s, a) = q(s, a) - b(s)$$\n",
     "\n",
-    "Ideally, we want to give **better-than-average** actions a positive score and **worse-than-average** actions a negative score. Crucially, even if an action yields a positive absolute reward (e.g., +10), if it performs worse than other possible actions (e.g., average is +50), the baseline ensures it receives a negative advantage score, discouraging the agent from taking it.\n",
+    "Ideally, we want to give **better-than-average** actions a positive score and **worse-than-average** actions a negative score. Crucially, even if an action yields a positive absolute reward (e.g., +10), if it performs worse than other possible actions (e.g., average is +50), the baseline ensures it receives a negative advantage score, discouraging the agent from taking it, so the agent learns to take better actions.\n",
     "\n",
     "We can prove that subtracting a baseline $b(s)$ does not alter the true gradient of the objective. Starting with the expected gradient form where we introduce the baseline:\n",
     "$$\n",
@@ -2230,6 +2230,11 @@
     "\\theta \\leftarrow \\theta + \\alpha \\sum_{t=0}^{T} \\nabla_\\theta \\ln \\pi_\\theta(a_t|s_t) \\underbrace{(G_t - v_\\phi(s_t))}_{\\text{Advantage Estimate } \\hat{A}_t}\n",
     "$$\n",
     "\n",
+    "In actor-critic method, since we have the value network, we can also approximated the sample return using TD instead of Monte Carlo to enable online learing, where\n",
+    "$$\n",
+    "\\theta \\leftarrow \\theta + \\alpha \\sum_{t=0}^{T} \\nabla_\\theta \\ln \\pi_\\theta(a_t|s_t) \\underbrace{(R_{t+1} + \\gamma v_\\phi(s_{t+1}) - v_\\phi(s_t))}_{\\text{Advantage Estimate } \\hat{A}_t}\n",
+    "$$\n",
+    "\n",
     "### Baseline Algorithm (Monte Carlo Policy Gradient)\n",
     "1. Given:\n",
     "   - Learning rates $\\alpha \\in (0, 1]$ (for Policy) and $\\beta \\in (0, 1]$ (for Value)\n",
@@ -2263,7 +2268,131 @@
     "4. Repeat until convergence:\n",
     "   - Continue running episodes until policy stabilizes or average return is maximized.\n",
     "\n",
-    "> Note: This results in moving target, but the error is managable because the value network is always trained on unbiased estimation (observed return) unlike DQN, which is trained based on its own value estimates. Therefore, the training of the policy net will eventually converge as the value network gives more accurate prediction over time."
+    "> Note: This results in moving target, but the error is managable because the value network is always trained on unbiased estimation (observed return) unlike DQN, which is trained based on its own value estimates. Therefore, the training of the policy net will eventually converge as the value network gives more accurate prediction over time.\n",
+    "\n",
+    "### Trusted Region\n",
+    "One issue about baseline policy gradient algorithm is it is sample inefficient because for each observed trajectory, we only use it once and throw it away. We might want to apply methods similar to experience reply in DQN, but unlike, DQN, the policy gradient method is on-policy and we cannot use samples collected from the old policy directly for future training.\n",
+    "\n",
+    "In order to be able to use past examples, we can rewrite our objective using the surrogate fuction, where we reweight the current policy with respect to an older version of the policy\n",
+    "\n",
+    "Mathematically, the policy gradient objective is the same as using the surrogate functions\n",
+    "step by step manipulation to show the two objective are equvalent at a particular set of theta.\n",
+    "\n",
+    "This is a local approximation, and if theta moves far away from the approximation point, the approximation becomes unreliable.\n",
+    "\n",
+    "Therefore we can use the update objective to be\n",
+    "update objective using surrogate\n",
+    "\n",
+    "Since the objective is to find the parameters that gives the highest average return, so instead of using the step gradient update, we can turn the problem into an maximation problem of the surrogate function and run optimizers on it, so we do not need to tune the learning rate anymore\n",
+    "\n",
+    "#### Policy Collapse Issue\n",
+    "In both baseline policy gradient and the surrogate version of it, we observe that through training, the average reward getting improved up to some point, then it could drop drastically afterward. We called this the policy collapse issue.\n",
+    "\n",
+    "\n",
+    "<img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNUcLArPrBI-SXo1iQYFaSmSRhLxmy6yIcFg&s\" width=300>\n",
+    "\n",
+    "This is because the update step has high variance, and through experiement, we found that the high variance does not come from the sampling estimation because the problem still persist even if we perform batched update by averging gradient from multiple trajectory.\n",
+    "\n",
+    "In fact, the problem come from the importance sampling, and the varaince of the estiamted surrogate function is proportional to the importance sampling ratio of the policy weighting. \n",
+    "\n",
+    "Using log derivative trick to show that a high variance in importance sampling ratio carries into the gradient.\n",
+    "\n",
+    "This means the update variance will be huge when the two policy are very different from each other, causing the update to be unstable.\n",
+    "\n",
+    "The root cause of is that, even if we update the parameter theta by a small amount every step, a small change in parameter may result in a huge chanage in the output policy (sensitivity of the policy), causing high variance importance sampling ratio, which could potentially cause another bigger gradient update, to make the policy even more different. This forms an unstable optimization problem \n",
+    "\n",
+    "Therefore, to prevent the policy collpase issue from high variance update, we need to make sure the policy before and after the update are close (not the parameter theta are close)enough so the importance sampling ratio is managable and woun't cause too aggresive update\n",
+    "\n",
+    "in essence, the key problem is that because we try to reuse past data, the importance sampling ratio can be high and lead to high variance update.\n",
+    "\n",
+    "\n",
+    "\n",
+    "To make sure the two policies are similar, we can use KL divergence as to measure the differences between the two policy, and regularize it under a certain distance, which we called the trusted region to represents the update is safe with an acceptable Variance.\n",
+    "\n",
+    "### Trust Regions\n",
+    "Standard Policy Gradient methods, such as REINFORCE and baseline, suffer significantly from **sample inefficiency** because of their **on-policy** nature: the mathematical validity of the gradient update relies on the expectation $\\mathbb{E}_{\\tau \\sim \\pi_\\theta}$, meaning data must be generated by the exact policy currently being optimized. \n",
+    "\n",
+    "Once a gradient update is performed ($\\theta \\to \\theta'$), the trajectory data collected under $\\theta$ becomes mathematically stale. Consequently, for every training step, the agent must interact with the environment to collect new data, and the old data is immediately discarded.\n",
+    "\n",
+    "While **Off-Policy** methods like DQN utilize **Experience Replay** to reuse past samples, standard PG cannot simply pull data from a replay buffer because it is on-policy. To address this, we must use importance sampling to correct the distribution shift, allowing us to reuse past data.\n",
+    "\n",
+    "\n",
+    "#### The Surrogate Objective Function\n",
+    "To utilize data collected from an older policy $\\pi_{\\theta_{old}}$, we employ **Importance Sampling (IS)**. We can rewrite the standard objective using a **Surrogate Function** that re-weights the probability of actions under the current policy relative to the old policy.\n",
+    "\n",
+    "The standard Policy Gradient is given by:\n",
+    "$$\n",
+    "\\nabla_\\theta J(\\theta) = \\mathbb{E}_{\\tau \\sim \\pi_\\theta} \\left[ \\nabla_\\theta \\ln \\pi_\\theta(a_t|s_t) A_t \\right]\n",
+    "$$\n",
+    "\n",
+    "We aim to construct a surrogate objective $L(\\theta)$ whose gradient equals the policy gradient at the specific point where $\\theta = \\theta_{old}$.\n",
+    "\n",
+    "Let the probability ratio be $r_t(\\theta) = \\frac{\\pi_\\theta(a_t|s_t)}{\\pi_{\\theta_{old}}(a_t|s_t)}$. The Surrogate Objective is defined as:\n",
+    "$$\n",
+    "L^{CPI}(\\theta) = \\mathbb{E}_{\\tau \\sim \\pi_{\\theta_{old}}} \\left[ r_t(\\theta) A_t \\right] = \\mathbb{E}_{\\tau \\sim \\pi_{\\theta_{old}}} \\left[ \\frac{\\pi_\\theta(a_t|s_t)}{\\pi_{\\theta_{old}}(a_t|s_t)} A_t \\right]\n",
+    "$$\n",
+    "\n",
+    "We can prove that maximizing this surrogate is locally equivalent to maximizing the original objective by taking the gradient with respect to $\\theta$ and evaluating it at $\\theta_{old}$:\n",
+    "\n",
+    "1.  Take the gradient of $L^{CPI}$:\n",
+    "    $$\n",
+    "    \\nabla_\\theta L^{CPI}(\\theta) = \\mathbb{E}_{\\tau \\sim \\pi_{\\theta_{old}}} \\left[ \\frac{\\nabla_\\theta \\pi_\\theta(a_t|s_t)}{\\pi_{\\theta_{old}}(a_t|s_t)} A_t \\right]\n",
+    "    $$\n",
+    "\n",
+    "2.  Evaluate at $\\theta = \\theta_{old}$. At this point, the denominator $\\pi_{\\theta_{old}}$ cancels with the value of the numerator $\\pi_{\\theta}$ (which is $\\pi_{\\theta_{old}}$), but we must be careful with the derivation. Using the log-derivative trick $\\nabla_\\theta \\pi = \\pi \\nabla_\\theta \\ln \\pi$:\n",
+    "    $$\n",
+    "    \\nabla_\\theta L^{CPI}(\\theta)\\Big|_{\\theta_{old}} = \\mathbb{E}_{\\tau \\sim \\pi_{\\theta_{old}}} \\left[ \\frac{\\pi_{\\theta_{old}}(a_t|s_t) \\nabla_\\theta \\ln \\pi_\\theta(a_t|s_t)}{\\pi_{\\theta_{old}}(a_t|s_t)} A_t \\right]\n",
+    "    $$\n",
+    "\n",
+    "3.  Simplify:\n",
+    "    $$\n",
+    "    \\nabla_\\theta J(\\theta)\\Big|_{\\theta_{old}} = \\nabla_\\theta L^{CPI}(\\theta)\\Big|_{\\theta_{old}} = \\mathbb{E}_{\\tau \\sim \\pi_{\\theta_{old}}} \\left[ \\nabla_\\theta \\ln \\pi_\\theta(a_t|s_t) A_t \\right]\n",
+    "    $$\n",
+    "\n",
+    "This demonstrates that the gradient of the surrogate function is identical to the true policy gradient at $\\theta_{old}$. However, this is strictly a **local approximation**. Even the gradient is still with respect to $\\theta$, as $\\theta$ moves away from $\\theta_{old}$, the distributions diverge, the IS weights deviate from 1, and the gradient approximation becomes inaccurate.\n",
+    "\n",
+    "The **key** here is that we try to make an on-policy algorithm off-policy, which results in an estimation that is only accurate within a certain region.\n",
+    "\n",
+    "This equivalence allows us to fundamentally change the optimization approach. Instead of calculating a single gradient step and discarding data, we can view this as a **maximization problem**. We can run an optimizer (like Adam) on the Surrogate Function $L^{CPI}(\\theta)$ for multiple epochs (updates) using the same batch of data. \n",
+    "\n",
+    "#### The Policy Collapse Issue\n",
+    "A recurring failure mode in Policy Gradient methods—both vanilla and unconstrained surrogate versions—is **Policy Collapse**. During training, the agent's average reward often improves steadily up to a certain point. Suddenly, performance drops drastically, often falling to zero or random-level performance, and the agent fails to recover.\n",
+    "\n",
+    "<img src=\"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNUcLArPrBI-SXo1iQYFaSmSRhLxmy6yIcFg&s\" width=300>\n",
+    "\n",
+    "This instability is driven by **high variance** in the update. Importantly, experiments show that this variance is not solely due to the stochasticity of the environment (sampling error from Monte Carlo returns). The issue persists even when using large batch sizes to average gradients across multiple trajectories.\n",
+    "\n",
+    "The primary source of this destructive variance is the **Importance Sampling (IS) ratio** itself: $\\rho_t = \\frac{\\pi_\\theta}{\\pi_{old}}$.\n",
+    "\n",
+    "The variance of an IS estimator is roughly proportional to the expected **square** of the weights ($\\rho_t^2$). If the policies $\\pi_\\theta$ and $\\pi_{old}$ differ significantly, $\\rho_t$ can fluctuate wildly, causing the variance of the estimator to explode.\n",
+    "\n",
+    "We can see how this carries into the gradient using the log-derivative expansion of the surrogate gradient:\n",
+    "$$\n",
+    "\\nabla_\\theta L(\\theta) \\approx \\mathbb{E} \\left[ \\underbrace{\\left( \\frac{\\pi_\\theta}{\\pi_{old}} \\right)}_{\\text{Ratio } \\rho_t} \\cdot \\nabla_\\theta \\ln \\pi_\\theta \\cdot A_t \\right]\n",
+    "$$\n",
+    "\n",
+    "The ratio $\\rho_t$ acts as a **scalar multiplier** on the gradient vector. \n",
+    "* If $\\rho_t$ spikes, the gradient vector is scaled up.\n",
+    "* This results in an excessively large parameter update, effectively kicking the policy into a region of parameter space that has not been explored.\n",
+    "\n",
+    "The root cause of the high variance gradient is the sensitivity mismatch between **Parameter Space ($\\theta$)** and **Policy Space ($\\pi$)**.\n",
+    "1.  **Sensitivity:** Neural networks are non-linear. Gradient descent results in a small change in parameters $\\theta$, but small change in parameters can result in a massive change in the output distribution $\\pi$.\n",
+    "2.  **The Loop:** We update $\\theta$ slightly. \n",
+    "    * Due to sensitivity, $\\pi_{new}$ drifts far from $\\pi_{old}$.\n",
+    "    * This causes the IS ratio $\\rho_t$ to deviate far from 1 (High Variance).\n",
+    "    * The high ratio generates a massive gradient update.\n",
+    "    * This massive update pushes $\\pi_{new}$ even further away, which means the gradient estimation more inaccurate.\n",
+    "\n",
+    "This creates an unstable positive feedback loop where the gradient will become more unstable overtime, causing the policy to collapse.\n",
+    "\n",
+    "To prevent Policy Collapse, we must impose a constraint on the update by keeping the two policy relatively close. In fact, we do not strictly care if the parameters $\\theta$ change significantly. We care that the **policy distribution** $\\pi$ remains close to the data-generating distribution $\\pi_{old}$.\n",
+    "\n",
+    "If we ensure the policies are \"close enough\":\n",
+    "1.  The IS ratio $\\rho_t$ remains close to 1.\n",
+    "2.  The variance of the update remains bounded.\n",
+    "3.  The local approximation of the Surrogate remains accurate.\n",
+    "\n",
+    "This leads to **Trust Region** methods (like TRPO and PPO), which explicitly constrain the update to ensure that the divergence between $\\pi_\\theta$ and $\\pi_{old}$ stays within a safe threshold, effectively preventing the variance explosion caused by reusing data."
    ]
   },
   {
