--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -2369,14 +2369,134 @@
     "Directly enforcing the KL constraint during optimization is computationally intractable for deep neural networks because the constraint is non-linear and highly complex. To solve this efficiently, we use **Taylor Series approximations** to simplify the problem into a form we can solve analytically. This yields the **Natural Policy Gradient** update rule:\n",
     "\n",
     "$$\n",
-    "\\theta_{new} = \\theta_{old} + \\alpha \\cdot \\mathbf{H}^{-1} \\nabla_\\theta L(\\theta)\n",
+    "\\theta_{new} = \\theta_{old} + \\alpha \\cdot \\mathbf{H}^{-1} \\nabla_\\theta L(\\theta) = \\theta_{old} + \\sqrt{\\frac{2\\delta}{\\nabla_\\theta L(\\theta)^T \\mathbf{H}^{-1} \\nabla_\\theta L(\\theta)}} \\cdot \\mathbf{H}^{-1} \\nabla_\\theta L(\\theta)\n",
     "$$\n",
     "\n",
     "* $\\mathbf{H}$ is the **Hessian matrix** of the KL divergence with respect to the parameters.\n",
+    "* $\\alpha$ is the step size, which is dynamically calculated based on the trust region radius $\\delta$:\n",
+    "$$\\alpha = \\sqrt{\\frac{2\\delta}{\\nabla_\\theta L(\\theta)^T \\mathbf{H}^{-1} \\nabla_\\theta L(\\theta)}}$$\n",
     "\n",
     "This method will reduce the variance in the gradient update significantly and force the policy to stay in a trusted region. However, this does not completely eliminate the deviate constraint because the gradient is also obtained through approximation, which can be inaccurate.\n",
     "\n",
-    "While theoretically ideal, the Natural Policy Gradient method has a major practical flaw: **Computational Complexity.** For modern Deep Reinforcement Learning networks, computing and inverting the Hessian at every step is impossible."
+    "While theoretically ideal, the Natural Policy Gradient method has a major practical flaw: **Computational Complexity.** For modern Deep Reinforcement Learning networks, computing and inverting the Hessian at every step is impossible.\n",
+    "\n",
+    "### Trust Region Policy Optimization (TRPO)\n",
+    "While Natural Policy Gradient (NPG) offers a mathematically superior update direction compared to standard gradient descent by accounting for the geometry of the parameter space, practical implementations suffer from two critical issues:\n",
+    "\n",
+    "#### 1. Approximation Error and Trust Region Violation\n",
+    "NPG aims to maximize an objective function $L(\\theta)$ subject to a trust region constraint defined by the KL divergence:\n",
+    "$$\\max_{\\theta} L(\\theta) \\quad \\text{subject to} \\quad D_{KL}(\\pi_{\\theta_{old}} || \\pi_{\\theta}) \\le \\delta$$\n",
+    "\n",
+    "To solve this, NPG approximates the constraint using a second-order Taylor expansion (a quadratic constraint). This leads to two specific failure modes:\n",
+    "1.  **Finite Step Violation:** The quadratic approximation is only locally valid (infinitesimally close to $\\theta_{old}$). When taking a finite step size (which is necessary for learning), the approximation error grows quadratically. A step size derived from the approximation often cause the gradient to have a magnitude larger than the trusted region radius, accidentally violating the trust region constraint $D_{KL} > \\delta$.\n",
+    "2.  **Directional Noise:** The curvature matrix (Fisher Information Matrix, $F$) is estimated from finite batches of data. Sampling noise can result in an estimated $F$ that is ill-conditioned or singular. Inverting a noisy, near-singular matrix amplifies the noise, resulting in an update vector that may point in a suboptimal or unstable direction.\n",
+    "\n",
+    "#### 2. Computational Complexity\n",
+    "The NPG update rule requires the inverse of the Fisher Information Matrix (FIM), denoted here as $H$ (Hessian of the KL divergence):\n",
+    "$$\\Delta \\theta = H^{-1} \\nabla L$$\n",
+    "For a neural network with $N$ parameters, $H$ is an $N \\times N$ matrix.\n",
+    "* **Storage:** Storing $H$ requires $O(N^2)$ memory, which is infeasible for deep networks\n",
+    "* **Inversion:** Computing $H^{-1}$ requires $O(N^3)$ computational complexity.\n",
+    "\n",
+    "\n",
+    "TRPO addresses these issues using two specific numerical techniques: **Backtracking Line Search** (for validity) and **Conjugate Gradient** (for scalability).\n",
+    "\n",
+    "#### Backtracking Line Search\n",
+    "To strictly enforce the trust region constraint and ensure monotonic improvement, correcting the gradient magnitude overshoot caused by the Taylor approximation. While NPG calculates a full step size based on the quadratic model, TRPO treats this as a *proposed* maximum step. Before committing to the update, it verifies the proposal against the *actual* non-linear objective and constraint.\n",
+    "\n",
+    "**The Algorithm:**\n",
+    "1.  Compute the gradient $\\sqrt{\\frac{2\\delta}{\\nabla_\\theta L(\\theta)^T \\mathbf{H}^{-1} \\nabla_\\theta L(\\theta)}} \\cdot \\mathbf{H}^{-1} \\nabla_\\theta L(\\theta)$\n",
+    "2.  Iterate through a decay coefficient $\\alpha^j$ (where $0 < \\alpha < 1$, typically $0.5$) for $j = 0, 1, 2, \\dots$:\n",
+    "    * Tentative update: $\\theta_{new} = \\theta_{old} + \\alpha^j \\sqrt{\\frac{2\\delta}{\\nabla_\\theta L(\\theta)^T \\mathbf{H}^{-1} \\nabla_\\theta L(\\theta)}} \\cdot \\mathbf{H}^{-1} \\nabla_\\theta L(\\theta)$\n",
+    "    * **Verification:** Check if the following two conditions hold:\n",
+    "        1.  **Constraint:** $D_{KL}(\\pi_{\\theta_{old}} || \\pi_{\\theta_{new}}) \\le \\delta$\n",
+    "        2.  **Improvement:** $J(\\pi_{\\theta_{new}}) \\ge J(\\pi_{\\theta_{old}})$ (Surrogate loss improves)\n",
+    "    * If conditions are met, accept $\\theta_{new}$ and terminate.\n",
+    "    * If not, increment $j$ (shrink step) and retry.\n",
+    "\n",
+    "Essentially, before every gradient update, the algorithm tentatively updates the policy and checks if the actual KL Divergence satisfies the constraint. If not, it decays the step size exponentially until the resulting policy falls inside the Trust Region radius. This guarantees that the update stays within the trust region regardless of the approximation error in the local model. Note that while this fixes the *magnitude* of the vector, it does not correct the *direction*.\n",
+    "\n",
+    "#### Conjugate Gradient (CG)\n",
+    "Conjugate gradient is used to estimate the search direction $H^{-1} \\nabla L$ without explicitly forming or inverting the massive Hessian matrix $H$. TRPO reformulates the inversion problem $\\Delta \\theta = H^{-1} \\nabla L$ into a system of linear equations:\n",
+    "$$H x = \\nabla L$$\n",
+    "where we solve for the vector $x$ (the search direction).\n",
+    "\n",
+    "**The Matrix-Free Approach:**\n",
+    "Conjugate Gradient is an iterative algorithm that can solve $Hx = \\nabla L$ using only matrix-vector products ($Hv$). Critically, we can compute the product of the Hessian and an arbitrary vector $v$ without constructing $H$, using the **Pearlmutter trick** (second-order backpropagation):\n",
+    "$$Hv = \\nabla_{\\theta} (\\nabla_{\\theta} D_{KL} \\cdot v)$$\n",
+    "\n",
+    "**Algorithm Steps:**\n",
+    "1.  **Gradient:** Compute the policy gradient estimator $g = \\nabla L$.\n",
+    "2.  **Iterative Solve:** Initialize $x_0 = 0$. iteratively refine $x_k$ to minimize the residual error $r = Hx - g$ using the conjugate direction.\n",
+    "3.  **Termination:** Run for $k$ iterations (typically 10–15). This yields an approximation $\\hat{x} \\approx H^{-1} g$.\n",
+    "\n",
+    "**Handling Noise (CG Damping):**\n",
+    "To mitigate the \"Noisy Direction\" issue caused by singular (zero) eigenvalues in $H$, TRPO adds a damping term $\\lambda$ (Conjugate Gradient Damping). We effectively solve for:\n",
+    "$$(H + \\lambda I)x = \\nabla L$$\n",
+    "This ensures numerical stability. If the curvature $H$ is very noisy or flat in a certain direction, the update reverts to the standard gradient descent direction.\n",
+    "\n",
+    "Combining both methods, the TRPO update is:\n",
+    "\n",
+    "$$\\theta_{new} = \\theta_{old} + \\alpha^j \\sqrt{\\frac{2\\delta}{\\hat{x}^T H \\hat{x}}} \\hat{x}$$\n",
+    "\n",
+    "* $\\hat{x} \\approx H^{-1} \\nabla J$ is the direction estimated by **Conjugate Gradient**.\n",
+    "* $\\alpha^j$ is the decay factor determined by **Backtracking Line Search**.\n",
+    "* $H$ is the Hessian matrix estimated through sampling\n",
+    "\n",
+    "### TRPO Algorithm\n",
+    "1. **Given:**\n",
+    "   - **Hyperparameters:**\n",
+    "     - Trust region radius $\\delta$ (e.g., 0.01)\n",
+    "     - Discount factor $\\gamma \\in [0, 1]$\n",
+    "     - GAE parameter $\\lambda \\in [0, 1]$ (optional, for Advantage estimation)\n",
+    "     - Conjugate Gradient iterations $N_{CG}$ (e.g., 10)\n",
+    "     - Backtracking line search coefficient $\\alpha \\in (0, 1)$ and max attempts $K$.\n",
+    "   - **Models:**\n",
+    "     - A parameterized stochastic policy $\\pi(a|s; \\theta)$ (Actor)\n",
+    "     - A parameterized value function $V(s; \\phi)$ (Critic/Baseline)\n",
+    "\n",
+    "2. **Initialize:**\n",
+    "   - Policy weights $\\theta$ and Value weights $\\phi$ arbitrarily.\n",
+    "\n",
+    "3. **Repeat (for each iteration):**\n",
+    "\n",
+    "   - **1. Data Collection:**\n",
+    "     - Run the current policy $\\pi_{\\theta_{old}}$ in the environment for $T$ timesteps or $N$ trajectories.\n",
+    "     - Collect a set of trajectories $\\mathcal{D} = \\{ \\tau_1, \\tau_2, \\dots \\}$.\n",
+    "     - Store states $S$, actions $A$, rewards $R$, and next states $S'$.\n",
+    "\n",
+    "   - **2. Advantage Estimation:**\n",
+    "     - For each timestep in the collected trajectories, estimate the Advantage $A_t$.\n",
+    "     - Typically done using Generalized Advantage Estimation (GAE):\n",
+    "       $$\\delta_t = R_t + \\gamma V(S_{t+1}; \\phi) - V(S_t; \\phi)$$\n",
+    "       $$A_t = \\sum_{k=0}^{\\infty} (\\gamma \\lambda)^k \\delta_{t+k}$$\n",
+    "     - Compute the rewards-to-go (returns) $\\hat{R}_t$ for the value function target.\n",
+    "\n",
+    "   - **3. Policy Update Step (The Trust Region Update):**\n",
+    "     - **Compute Policy Gradient:** Calculate the gradient of the surrogate objective w.r.t. $\\theta$:\n",
+    "       $$g = \\nabla_\\theta L(\\theta)|_{\\theta_{old}} = \\nabla_\\theta \\left( \\frac{1}{|\\mathcal{D}|} \\sum_{(s,a) \\in \\mathcal{D}} \\frac{\\pi_\\theta(a|s)}{\\pi_{\\theta_{old}}(a|s)} A_t \\right)$$\n",
+    "     \n",
+    "     - **Compute Search Direction (Conjugate Gradient):**\n",
+    "       - Estimate the Fisher Information Matrix-vector product ($Hv$) efficiently (without forming full matrix $H$) using the Hessian-vector product trick.\n",
+    "       - Solve the linear system $H x = g$ for $x$ using the **Conjugate Gradient (CG)** algorithm to get the search direction $x \\approx H^{-1}g$.\n",
+    "\n",
+    "     - **Compute Max Step Size:**\n",
+    "       - Calculate the maximal step size $\\beta$ that ensures the quadratic approximation of KL divergence stays within $\\delta$:\n",
+    "         $$\\beta = \\sqrt{\\frac{2\\delta}{x^T H x}}$$\n",
+    "       - The proposed full step is $\\Delta \\theta = \\beta x$.\n",
+    "\n",
+    "     - **Backtracking Line Search:**\n",
+    "       - Perform a line search to find the largest step $\\Delta \\theta_{final} = \\alpha^j \\Delta \\theta$ (for $j=0, 1, \\dots, K$) that satisfies:\n",
+    "         1. **Surrogate Improvement:** $L(\\theta_{old} + \\Delta \\theta_{final}) \\ge 0$ (Objective improves)\n",
+    "         2. **KL Constraint:** $D_{KL}(\\pi_{\\theta_{old}} || \\pi_{\\theta_{old} + \\Delta \\theta_{final}}) \\le \\delta$ (Actually inside Trust Region)\n",
+    "       - Update $\\theta \\leftarrow \\theta_{old} + \\Delta \\theta_{final}$ (Replace the old policy by the new one after each iteration).\n",
+    "\n",
+    "   - **4. Value Function Update:**\n",
+    "     - Update $\\phi$ to minimize the Mean Squared Error between the estimated value and the actual returns $\\hat{R}_t$:\n",
+    "       $$\\phi \\leftarrow \\arg\\min_\\phi \\sum_{t} \\left( V(S_t; \\phi) - \\hat{R}_t \\right)^2$$\n",
+    "     - (Usually solved via standard Adam/SGD optimizer for multiple epochs).\n",
+    "\n",
+    "4. **Repeat until convergence.**"
    ]
   },
   {
