--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -2293,6 +2293,8 @@
     "L^{CPI}(\\theta) = \\mathbb{E}_{\\tau \\sim \\pi_{\\theta_{old}}} \\left[ r_t(\\theta) A_t \\right] = \\mathbb{E}_{\\tau \\sim \\pi_{\\theta_{old}}} \\left[ \\frac{\\pi_\\theta(a_t|s_t)}{\\pi_{\\theta_{old}}(a_t|s_t)} A_t \\right]\n",
     "$$\n",
     "\n",
+    "> Note: $\\frac{\\pi_\\theta(a_t|s_t)}{\\pi_{\\theta_{old}}(a_t|s_t)}$ is computed with respect to each individual transition within the given trajectory. Therefore, this is simply comparing the probability density of the specific action taken ($a$) under the new policy versus the old policy, at the current state $s_t$. The assumption here is that the difference between the two action distributions at the current state represents the overall differences between the two policies.\n",
+    "\n",
     "We can prove that maximizing this surrogate is locally equivalent to maximizing the original objective by taking the gradient with respect to $\\theta$ and evaluating it at $\\theta_{old}$:\n",
     "\n",
     "1.  Take the gradient of $L^{CPI}$:\n",
@@ -2496,7 +2498,65 @@
     "       $$\\phi \\leftarrow \\arg\\min_\\phi \\sum_{t} \\left( V(S_t; \\phi) - \\hat{R}_t \\right)^2$$\n",
     "     - (Usually solved via standard Adam/SGD optimizer for multiple epochs).\n",
     "\n",
-    "4. **Repeat until convergence.**"
+    "4. **Repeat until convergence.**\n",
+    "\n",
+    "### Proximal Policy Optimization (PPO)\n",
+    "While **Trust Region Policy Optimization (TRPO)** provides a theoretically rigorous way to ensure safe updates by constraining the **KL Divergence** between policies, it faces a significant challenges due to high computational complexity. TRPO requires calculating (or estimating via Conjugate Gradient) the Hessian or Fisher Information Matrix to define the trust region, which is computationally expensive and difficult to implement.\n",
+    "\n",
+    "**Proximal Policy Optimization (PPO)** simplifies this by approximating the trust region constraint. The core distinction lies in how they measure the \"difference\" between the old policy ($\\pi_{old}$) and the new policy ($\\pi_\\theta$):\n",
+    "\n",
+    "* **TRPO (Distributional Comparison):** Compares the **full** action distribution of at the given state $s_t$\n",
+    "* **PPO (Pointwise Comparison):** Compares only the **probability ratio** of the specific action ($a_t$) that was actually selected.\n",
+    "\n",
+    "#### The Hierarchy of Approximations\n",
+    "Ideally, we would measure the policy difference across **all possible states** and **all possible actions**. Since this is impossible, both algorithms rely on approximations:\n",
+    "\n",
+    "1.  **TRPO Assumption:** It assumes that constraining the KL divergence of the action distributions at the current sampled state ($s_t$) is sufficient to control the policy's behavior globally.\n",
+    "2.  **PPO Assumption:** It takes a step further. It assumes that constraining the probability ratio of the **sampled actions** ($a_t$) is a sufficient proxy for the entire distribution's stability. It effectively ignores changes in the probability of actions that were not sampled.\n",
+    "\n",
+    "#### The Clipped Surrogate Objective\n",
+    "In TRPO, enforcing the Trust Region involves a complex **Backtracking Line Search** to iteratively decay the update step until the KL constraint is satisfied. PPO replaces this complex process with a simple **Clipping Mechanism**. Instead of calculating a step size, PPO modifies the objective function itself to penalize the agent if the ratio moves too far from 1. The PPO objective puts a **Hard Bound** on the importance sampling ratio, limiting it to the range $[1-\\epsilon, 1+\\epsilon]$ (where $\\epsilon$ is typically 0.2).\n",
+    "\n",
+    "The PPO \"Clipped\" objective is defined as:\n",
+    "\n",
+    "$$\n",
+    "L^{CLIP}(\\theta) = \\mathbb{E}_t \\left[ \\min \\left( r_t(\\theta) A_t, \\text{clip}(r_t(\\theta), 1-\\epsilon, 1+\\epsilon) A_t \\right) \\right]\n",
+    "$$\n",
+    "\n",
+    "* **$r_t(\\theta)$** is the probability ratio: $\\frac{\\pi_\\theta(a_t|s_t)}{\\pi_{\\theta_{old}}(a_t|s_t)}$\n",
+    "* **$A_t$** is the Advantage estimate at time $t$.\n",
+    "* **$\\epsilon$** is the hyperparameter determining the clip range.\n",
+    "* $\n",
+    "\\text{clip}(r_t(\\theta), 1-\\epsilon, 1+\\epsilon) = \n",
+    "\\begin{cases} \n",
+    "1 - \\epsilon & \\text{if } r_t(\\theta) < 1 - \\epsilon \\\\\n",
+    "r_t(\\theta) & \\text{if } 1 - \\epsilon \\le r_t(\\theta) \\le 1 + \\epsilon \\\\\n",
+    "1 + \\epsilon & \\text{if } r_t(\\theta) > 1 + \\epsilon\n",
+    "\\end{cases}\n",
+    "$\n",
+    "\n",
+    "The `min` operator selects the more pessimistic (lower) value between the unclipped and clipped objectives. This creates two distinct behaviors depending on the Advantage:\n",
+    "\n",
+    "1.  **Positive Advantage ($A > 0$):** The action was good. We want to increase its probability (ratio $> 1$).\n",
+    "    * If the ratio grows beyond $1+\\epsilon$, the objective hits a ceiling (constant value). The gradient becomes **0**, preventing the update from being too greedy.\n",
+    "2.  **Negative Advantage ($A < 0$):** The action was bad. We want to decrease its probability (ratio $< 1$).\n",
+    "    * If the ratio drops below $1-\\epsilon$, the objective hits a floor. The gradient becomes **0**, preventing the update from destroying the policy (irreversibly driving probability to 0).\n",
+    "\n",
+    "Notice that since the we selected the clipped objective, the gradient becomes 0, which means the optimzer will ignore that example when updating the policy because it is an \"unsafe\" update. The clipping objective will be hit more often as the two policies become more and more different from each other, so we need to update the $\\pi_{old}$ to $\\pi_{\\theta}$ from time to time.\n",
+    "\n",
+    "This clipping mechanism transforms the constrained optimization problem into an unconstrained one that can be solved using standard **First-Order Optimizers** (like Adam or SGD).\n",
+    "* **No Hessian:** We do not need to calculate second-order derivatives or inverse matrices.\n",
+    "* **Multi-Epoch Updates:** Because the clipping prevents the policy from diverging too quickly, we can safely reuse the collected trajectory data for multiple gradient updates (epochs), making PPO significantly more sample-efficient than vanilla Policy Gradient.\n",
+    "\n",
+    "#### Sampling Efficiency\n",
+    "Both TRPO and PPO also acheives higher sample efficiency because, we can reuse our previous samples for some time, as long as the new policy is still within the trusted region, we can use samples from the old policy since the two policies are not too different.\n",
+    "\n",
+    "Therefore, similar to DQN, we can also use an experience buffer and collect multiple sample trajectory and save them into into a buffer, and we can break the buffer into mini-batches and go multiple epochs over it.\n",
+    "\n",
+    "However, since the we need to update $\\pi_{old}$ from time to time, this means we need to reset entire buffer once $\\pi_{old}$ is updated because we cannot reuse the trajectories sampled from an older version of the policy.\n",
+    "\n",
+    "\n",
+    "### PPO Algorithm"
    ]
   },
   {
